Name:           ella
Version:        0.1.2
Description:    Django-inspired web framework
License:        BSD3
License-file:   LICENSE
Author:         Luke Plant
Maintainer:     L.Plant.98@cantab.net
Cabal-Version:  >= 1.2
Build-Type:     Simple

Library
  Build-Depends:
        base == 4.*,
        bytestring >= 0.9.1,
        stringsearch >= 0.2.1.1,
        haskell98 >= 1.0.1,
        containers >= 0.1.0,
        utf8-string >= 0.3.1,
        xhtml >= 3000,
        parsec >= 2.1 && <= 3,
        network >= 2.1,
        SHA >= 1.0.2,
        old-time >= 1.0.0,
        unix >= 2.3,
        cgi >= 3001
  Exposed-Modules:
    Ella.Request, Ella.Response, Ella.GenUtils, Ella.Utils, Ella.Framework,
    Ella.Processors.General, Ella.Processors.Security
    Ella.Param, Ella.Forms.Widgets,
    Ella.Forms.Base, Ella.Forms.Widgets.TextInput, Ella.Forms.Widgets.Textarea,
    Ella.Forms.Widgets.RadioButton, Ella.Forms.Widgets.RadioButtonList, 
    Ella.TestUtils
  Other-Modules:
    Ella.CGI.Header, Ella.CGI.Multipart

  hs-source-dirs: src
